@@ -736,7 +736,6 @@ public class JSONArray implements Iterable<Object>
 			if (clazz.isAssignableFrom(val.getClass()))
 			{
 				// we just checked it!
-				@SuppressWarnings("unchecked")
 				E myE = (E)val;
 				return myE;
 			}
@@ -919,7 +918,7 @@ public class JSONArray implements Iterable<Object>
 	 */
 	public JSONArray put(double value) throws JSONException
 	{
-		Double d = new Double(value);
+		Double d = Double.valueOf(value);
 		JSONObject.testValidity(d);
 		put(d);
 		return this;
@@ -934,7 +933,7 @@ public class JSONArray implements Iterable<Object>
 	 */
 	public JSONArray put(int value)
 	{
-		put(new Integer(value));
+		put(Integer.valueOf(value));
 		return this;
 	}
 
@@ -947,7 +946,7 @@ public class JSONArray implements Iterable<Object>
 	 */
 	public JSONArray put(long value)
 	{
-		put(new Long(value));
+		put(Long.valueOf(value));
 		return this;
 	}
 
@@ -1033,7 +1032,7 @@ public class JSONArray implements Iterable<Object>
 	 */
 	public JSONArray put(int index, double value) throws JSONException
 	{
-		put(index, new Double(value));
+		put(index, Double.valueOf(value));
 		return this;
 	}
 
@@ -1052,7 +1051,7 @@ public class JSONArray implements Iterable<Object>
 	 */
 	public JSONArray put(int index, int value) throws JSONException
 	{
-		put(index, new Integer(value));
+		put(index, Integer.valueOf(value));
 		return this;
 	}
 
@@ -1071,7 +1070,7 @@ public class JSONArray implements Iterable<Object>
 	 */
 	public JSONArray put(int index, long value) throws JSONException
 	{
-		put(index, new Long(value));
+		put(index, Long.valueOf(value));
 		return this;
 	}
 
